# Computational-Mathematics

./: README.md
2-1/Task/: Task 1.cpp
2-1/Task 2/: Task 2.cpp
2-1/Task 3/: Task 3.cpp
2-1/Task 4/: Task 4.cpp
2-1/Task 5/: Task 5.cpp
2-2/Task/: Task 1.cpp
2-2/Task 2/: Task 2.cpp
2-2/Task 3/Task 3 Count AB/: Task 3  Task 3-Count AB  Task 3-Count AB.cpp
2-2/Task 3/Task 3 Count EA/: Task 3-Count EA.cpp
2-2/Task 4/: Task 3-Count EA  Task 4-Count EA Equal  Task 4-Count EA Equal.cpp
3/Task 1/: Task 1  Task 1.cpp
3/Task 2/: Task 2.cpp  test.cpp
4/Task/: Task 1  Task 1.cpp
4/Task 2/: Task 2  Task 2.cpp
4/Task 3/: Task 3.cpp
7/: CMakeLists.txt  Lab7.sh  README.md  lab07-2.txt  lll.cpp  llllib.cpp  llllib.h  main.cpp
